--- a/html/wz/job_letter_ver01.html
+++ b/html/wz/job_letter_ver01.html
@@ -32,31 +32,31 @@
                                       <tr>
                                         <td>
                                           <a href="http://post.naver.com/gjf_job" style="outline: 0; border: none; text-decoration: none;">
-                                            <img src="https://chaebonggi.github.io/jobaba2023/html/wz/common/icon_blog.png" alt="네이버포스트" width="25" height="25">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/job_letter/icon_blog.jpg" alt="네이버포스트" width="25" height="25">
                                           </a>
                                         </td>
                                         <td style="font-size: 0; line-height: 0;" width="4">&nbsp;</td>
                                         <td>
                                           <a href="https://twitter.com/jobabanet">
-                                            <img src="https://chaebonggi.github.io/jobaba2023/html/wz/common/icon_twitter.png" alt="트위터" width="25" height="25">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/job_letter/icon_twitter.jpg" alt="트위터" width="25" height="25">
                                           </a>
                                         </td>
                                         <td style="font-size: 0; line-height: 0;" width="4">&nbsp;</td>
                                         <td>
                                           <a href="https://www.instagram.com/jobabanet">
-                                            <img src="https://chaebonggi.github.io/jobaba2023/html/wz/common/icon_instagram.png" alt="인스타그램" width="25" height="25">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/job_letter/icon_instagram.jpg" alt="인스타그램" width="25" height="25">
                                           </a>
                                         </td>
                                         <td style="font-size: 0; line-height: 0;" width="4">&nbsp;</td>
                                         <td>
                                           <a href="https://www.youtube.com/channel/UC69DhLD0FUmLgP9BsxitbDw">
-                                            <img src="https://chaebonggi.github.io/jobaba2023/html/wz/common/icon_youtube.png" alt="유튜브" width="25" height="25">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/job_letter/icon_youtube.jpg" alt="유튜브" width="25" height="25">
                                           </a>
                                         </td>
                                         <td style="font-size: 0; line-height: 0;" width="4">&nbsp;</td>
                                         <td>
                                           <a href="https://www.facebook.com/jobabanet">
-                                            <img src="https://chaebonggi.github.io/jobaba2023/html/wz/common/icon_facebook.png" alt="페이스북" width="25" height="25">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/job_letter/icon_facebook.jpg" alt="페이스북" width="25" height="25">
                                           </a>
                                         </td>
                                       </tr>
