--- a/html/wz/new_job_letter02.html
+++ b/html/wz/new_job_letter02.html
@@ -24,13 +24,13 @@
                       <tr>
                         <td style="background-color: #f2fbfd;">
                           <a href="https://www.jobaba.net/main/main.do" target="_blank" style="text-decoration: none; padding: 30px 30px 30px 30px; display: inline-block;">
-                            <img src="./images/new_job01/logo.png" alt="잡아바 로고" width="68">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job01/logo.png" alt="잡아바 로고" width="68">
                           </a>
                         </td>
                       </tr>
                       <tr>
                         <td>
-                          <img src="./images/new_job01/letter_tit01.jpg" alt="잡아바가 추천하는 채용공고에 지금 바로 지원해보세요!" width="800" style="display: block;width: 100%">
+                          <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job01/letter_tit01.jpg" alt="잡아바가 추천하는 채용공고에 지금 바로 지원해보세요!" width="800" style="display: block;width: 100%">
                         </td>
                       </tr>
                     </tbody>
@@ -42,10 +42,10 @@
                   <!-- 메인 컨텐츠 -->
                   <table align="center" border="0" cellpadding="0" cellspacing="0" width="740" style="max-width: 740px; width: 100%">
                     <tbody>
-                       <!-- 경기남부권역 -->
+                       <!-- 연구직 -->
                       <tr>
                         <td>
-                          <img src="./images/new_job01/job_tit01.jpg" alt="경기남부권역" width="740" style="display: block;">
+                          <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job02/job_tit01.jpg" alt="연구직" width="740" style="display: block;">
                         </td>
                       </tr>
                       <tr>
@@ -53,8 +53,8 @@
                       </tr>
                       <tr>
                         <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14108" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_01.jpg" alt="정보통신대학교학팀 계약직 채용" width="740" style="display: block;width: 100%">
+                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14105" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job02/job_01.jpg" alt="위촉연구원(연구조원) 채용공고" width="740" style="display: block;width: 100%">
                           </a>
                         </td>
                       </tr> 
@@ -63,8 +63,8 @@
                       </tr>
                       <tr>
                         <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14112" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_02.jpg" alt="직무능력 평가기반 신입직원 채용공고" width="740" style="display: block;width: 100%">
+                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14102" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job02/job_02.jpg" alt="2024년 3분기 1차 KDI위촉직원 채용 공고" width="740" style="display: block;width: 100%">
                           </a>
                         </td>
                       </tr>
@@ -73,8 +73,8 @@
                       </tr>
                       <tr>
                         <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14116" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_03.jpg" alt="2024년 하반기 일반직 직원 채용공고" width="740" style="display: block;width: 100%">
+                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14111" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job02/job_03.jpg" alt="스마트홈/홈네트워크 개발지원 신입 및 경력직 채용" width="740" style="display: block;width: 100%">
                           </a>
                         </td>
                       </tr> 
@@ -83,8 +83,8 @@
                       </tr>
                       <tr>
                         <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=13792" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_04.jpg" alt="경기도 대학생 학자금 대출이자 지원사업 기간제근로자 채용 공고" width="740" style="display: block;width: 100%">
+                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14107" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job02/job_04.jpg" alt="(주)프로엔솔루션 은행 채널 테스트 담당자 모집" width="740" style="display: block;width: 100%">
                           </a>
                         </td>
                       </tr> 
@@ -95,17 +95,17 @@
                       <tr>
                         <td>
                           <a href="https://forms.gle/cd2j2DfqFSkbDHHV7" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/new_banner.jpg" alt="잡아바 설문 EVENT" width="740" style="display: block;width: 100%">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job01/new_banner.jpg" alt="잡아바 설문 EVENT" width="740" style="display: block;width: 100%">
                           </a>
                         </td>
                       </tr> 
                       <tr>
                         <td style="height: 30px;"></td>
                       </tr>
-                      <!-- 경기서부권역 -->
+                      <!-- 교육/법률 -->
                       <tr>
                         <td>
-                          <img src="./images/new_job01/job_tit02.jpg" alt="경기서부권역" width="740" style="display: block;">
+                          <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job02/job_tit02.jpg" alt="교육/법률" width="740" style="display: block;">
                         </td>
                       </tr>
                       <tr>
@@ -113,8 +113,8 @@
                       </tr>
                       <tr>
                         <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14110" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_05.jpg" alt="2024년 체험형 청년인턴 채용" width="740" style="display: block;width: 100%">
+                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14097" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job02/job_05.jpg" alt="직업훈련교사 인력충원 공고" width="740" style="display: block;width: 100%">
                           </a>
                         </td>
                       </tr> 
@@ -123,28 +123,18 @@
                       </tr>
                       <tr>
                         <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=13229" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_06.jpg" alt="일시사역 인력풀 1차 모집 공고" width="740" style="display: block;width: 100%">
+                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14104" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job02/job_06.jpg" alt="한국에너지공단 전문직(변호사) 채용" width="740" style="display: block;width: 100%">
                           </a>
                         </td>
-                      </tr> 
-                      <tr>
-                        <td style="height: 10px;"></td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=10895" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_07.jpg" alt="지역산업맞춤형 일자리창출 지원사업 전담인력 채용" width="740" style="display: block;width: 100%">
-                          </a>
-                        </td>
-                      </tr> 
+                      </tr>                       
                       <tr>
                         <td style="height: 30px;"></td>
                       </tr>
-                      <!-- 경기동부권역 -->
+                      <!-- 보건/의료 -->
                       <tr>
                         <td>
-                          <img src="./images/new_job01/job_tit03.jpg" alt="경기동부권역" width="740" style="display: block;">
+                          <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job02/job_tit03.jpg" alt="보건/의료" width="740" style="display: block;">
                         </td>
                       </tr>
                       <tr>
@@ -152,88 +142,29 @@
                       </tr>
                       <tr>
                         <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14119" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_08.jpg" alt="한국문화진흥㈜ 직원 채용 공고" width="740" style="display: block;width: 100%">
+                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14092" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job02/job_07.jpg" alt="국립공원공단 구조대장(개방형직위) 채용" width="740" style="display: block;width: 100%">
                           </a>
                         </td>
-                      </tr>
+                      </tr> 
                       <tr>
                         <td style="height: 10px;"></td>
                       </tr>
                       <tr>
                         <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14121" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_09.jpg" alt="소프트웨어정책연구소 2024년 정규직 채용 공고" width="740" style="display: block;width: 100%">
+                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14114" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job02/job_08.jpg" alt="암예방검진센터 영상의학과 전문계약직(의사) 초빙 공고" width="740" style="display: block;width: 100%">
                           </a>
                         </td>
-                      </tr>
-                      <tr>
-                        <td style="height: 10px;"></td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=13698" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_10.jpg" alt="2024년도 계약직(사무보조, 시설관리) 채용 공고" width="740" style="display: block;width: 100%">
-                          </a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td style="height: 30px;"></td>
-                      </tr>
-                      <!-- 경기북부권역 -->
-                      <tr>
-                        <td>
-                          <img src="./images/new_job01/job_tit04.jpg" alt="경기북부권역" width="740" style="display: block;">
-                        </td>
-                      </tr>
-                      <tr>
-                        <td style="height: 12px;"></td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14112" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_11.jpg" alt="직무능력 평가기반 신입직원 채용공고" width="740" style="display: block;width: 100%">
-                          </a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td style="height: 10px;"></td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14116" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_12.jpg" alt="2024년 하반기 일반직 직원 채용공고" width="740" style="display: block;width: 100%">
-                          </a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td style="height: 10px;"></td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=13227" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_13.jpg" alt="2024년 제2회 공개경쟁 채용시험 공고" width="740" style="display: block;width: 100%">
-                          </a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td style="height: 10px;"></td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=13204" target="_blank" style="text-decoration: none;">
-                            <img src="./images/new_job01/job_14.jpg" alt="2024년 제5회 지방임기제공무원 채용" width="740" style="display: block;width: 100%">
-                          </a>
-                        </td>
-                      </tr>
+                      </tr>                      
                       <tr>
                         <td style="height: 40px;"></td>
                       </tr>
                       <!-- 더 많은 공고 보러가기 -->
                       <tr>
                         <td align="center">
-                          <a href="https://www.jobaba.net/pblcEmpmn/list.do?paramString=srchCnd=chk_workRgnCd_08,chk_rcrutFldCd_02,chk_rcrutFldCd_03&srchType=RECOMMEND&currentPageNo=1" target="_blank" style="display: inline-block; text-align: center;">       
-                            <img src="./images/new_job01/job_more_btn.jpg" alt="더 많은 공고 보러가기" width="312" style="display: block;width: 100%">
+                          <a href="https://www.jobaba.net/pblcEmpmn/list.do?paramString=srchCnd=chk_rcrutFldCd_04,chk_rcrutFldCd_05,chk_rcrutFldCd_06,chk_rcrutFldCd_07,chk_rcrutFldCd_25&srchType=RECOMMEND&currentPageNo=1" target="_blank" style="display: inline-block; text-align: center;">       
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job01/job_more_btn.jpg" alt="더 많은 공고 보러가기" width="312" style="display: block;width: 100%">
                           </a>
                         </td>
                       </tr>
@@ -244,7 +175,7 @@
               <!-- 취업역량강화 지원 서비스 -->
                <tr>
                 <td style="padding: 70px 30px 40px 30px; background-color: #f2fbfd;">
-                  <img src="./images/new_job01/job_tit05.jpg" alt="취업역량강화 지원 서비스">
+                  <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job01/job_tit05.jpg" alt="취업역량강화 지원 서비스">
                 </td>
                </tr>
                 <tr>
@@ -254,12 +185,12 @@
                         <tr>
                           <td>
                             <a href="https://www.jobaba.net/jobDiagnose/diagnoseView.do" target="_blank" style="text-decoration: none;">
-                              <img src="./images/new_job01/job_service_01.jpg" alt="취업진로진단검사" width="370" style="display: block;width: 100%">
+                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job01/job_service_01.jpg" alt="취업진로진단검사" width="370" style="display: block;width: 100%">
                             </a>
                           </td>
                           <td>  
                             <a href="https://www.jobaba.net/interview/mainList.do" target="_blank" style="text-decoration: none;">
-                              <img src="./images/new_job01/job_service_02.jpg" alt="ai역량검사" width="370" style="display: block;width: 100%">
+                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job01/job_service_02.jpg" alt="ai역량검사" width="370" style="display: block;width: 100%">
                             </a>
                           </td>
                         </tr>
