--- a/index.html
+++ b/index.html
@@ -268,6 +268,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/job_letter_ver01.html" class="preview" target="_blank">공공일자리 뉴스레터 ver01</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/lms_letter01.html" class="preview" target="_blank">러닝센터 뉴스레터</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
