--- a/index.html
+++ b/index.html
@@ -273,6 +273,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/lms_letter01.html" class="preview" target="_blank">러닝센터 뉴스레터</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz330.html" class="preview" target="_blank">뉴스레터 330호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
