--- a/index.html
+++ b/index.html
@@ -278,6 +278,21 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz330.html" class="preview" target="_blank">뉴스레터 330호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/new_job_letter01.html" class="preview" target="_blank">공공일자리 뉴스레터 ver01</a></td>
+			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/new_job_letter02.html" class="preview" target="_blank">공공일자리 뉴스레터 ver02</a></td>
+			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/new_job_letter03.html" class="preview" target="_blank">공공일자리 뉴스레터 ver03</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
