--- a/index.html
+++ b/index.html
@@ -293,6 +293,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/new_job_letter03.html" class="preview" target="_blank">공공일자리 뉴스레터 ver03</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz331.html" class="preview" target="_blank">뉴스레터 331호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
