--- a/index.html
+++ b/index.html
@@ -298,6 +298,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz331.html" class="preview" target="_blank">뉴스레터 331호</a></td>
 			</tr>
+			<tr class="event">
+				<td></td>
+				<td>이벤트</td>
+				<td><a href="html/event/event04.html" class="preview" target="_blank">잡아바 미션 수행이벤트</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
