--- a/html/event/event04.html
+++ b/html/event/event04.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>취업성공 축하이벤트</title>
+	<title>잡아바 미션 수행이벤트</title>
 	<!-- 잡아바 default-->
 	<!-- core CSS -->
 	<link type="text/css" rel="stylesheet" href="https://www.jobaba.net/resource/css/new/import.css">
