--- a/html/event/event04.html
+++ b/html/event/event04.html
@@ -328,7 +328,7 @@
 							</ul>
 							<ul class="btnList">
 								<li>
-									<a href=""><p class="gBold">바로가기 →</p></a>
+									<a href="https://www.jobaba.net/interview/mainList.do"><p class="gBold">바로가기 →</p></a>
 								</li>
 							</ul>
 						</div>
@@ -354,7 +354,7 @@
 							</ul>
 							<ul class="btnList">
 								<li>
-									<a href=""><p class="gBold">바로가기 →</p></a>
+									<a href="https://www.jobaba.net/auland/mainList.do"><p class="gBold">바로가기 →</p></a>
 								</li>
 							</ul>
 						</div>
@@ -381,16 +381,16 @@
 							</ul>
 							<ul class="btnList">
 								<li>
-									<a href=""><p class="gBold">직업선호도 →</p></a>
+									<a href="https://www.jobaba.net/epmtDiag/jobPrfrnc/jobPrfrncMain.do"><p class="gBold">직업선호도 →</p></a>
 								</li>
 								<li>
-									<a href=""><p class="gBold">취업준비도 →</p></a>
+									<a href="https://www.jobaba.net/epmtDiag/epmtPrep/epmtPrepMain.do"><p class="gBold">취업준비도 →</p></a>
 								</li>
 								<li>
-									<a href=""><p class="gBold">취업가능성 →</p></a>
+									<a href="https://www.jobaba.net/jobInfo/jobInfoMain.do"><p class="gBold">취업가능성 →</p></a>
 								</li>
 								<li>
-									<a href=""><p class="gBold">NCS직업역량진단 →</p></a>
+									<a href="https://www.jobaba.net/jobInfoNcs/jobInfoNcsMain.do"><p class="gBold">NCS직업역량진단 →</p></a>
 								</li>
 							</ul>
 						</div>
