--- a/html/event/event04.html
+++ b/html/event/event04.html
@@ -157,7 +157,7 @@
 						</div>
 						<div class="txtWrap">
 							<p class="gBold txt01"><span class="gBold">MISSION</span>을 수행하면 <span class="gBold">‘룰렛 참여권’</span>을 드립니다!</p>
-							<p class="txt02">룰렛을 돌려 경품을 죽시 확인해보세요!</p>
+							<p class="txt02">룰렛을 돌려 경품을 즉시 확인해보세요!</p>
 							<p class="txt03">경품은 8월 27일(화) 기프티콘으로 일괄 발송됩니다.</p>
 						</div>
 						<ul>
