--- a/html/event/event04.html
+++ b/html/event/event04.html
@@ -243,7 +243,7 @@
 					<!-- 당첨 내역 -->
 					<div class="giftInfo">
 						<div class="titWrap">
-							<p class="gBold">나의 룰렛 당첨 내역</p>
+							<p>나의 룰렛 당첨 내역</p>
 						</div>
 						<table>
 							<caption>나의 룰렛 당첨내역</caption>
@@ -318,17 +318,12 @@
 							</p>
 							<ul class="infoList">
 								<li>
-									<strong>미션 수행 방법</strong>
-									<p><span>AI역량검사 완료</span>하면 참여권 지급</p>
-								</li>
-								<li>
-									<strong>참여권 지급 개수</strong>
-									<p><span>4개</span> <em>(검사 완료 후 즉시 지급)</em></p>
+									<p><span>AI역량검사 완료</span>하면 참여권 <span>4개</span> 지급<br> <em>(검사 완료 후 즉시 지급)</em></p>
 								</li>
 							</ul>
 							<ul class="btnList">
 								<li>
-									<a href="https://www.jobaba.net/interview/mainList.do"><p class="gBold">바로가기 →</p></a>
+									<a href="https://www.jobaba.net/interview/mainList.do"><p class="gBold">바로가기</p></a>
 								</li>
 							</ul>
 						</div>
@@ -344,17 +339,12 @@
 							</p>
 							<ul class="infoList">
 								<li>
-									<strong>미션 수행 방법</strong>
-									<p><span>취업진로진단검사 완료</span>하면 참여권 지급</p>
-								</li>
-								<li>
-									<strong>참여권 지급 개수</strong>
-									<p><span>3개</span> <em>(검사 완료 후 즉시 지급)</em></p>
+									<p><span>취업진로진단검사 완료</span>하면 참여권 <span>3개</span> 지급<br> <em>(검사 완료 후 즉시 지급)</em></p>
 								</li>
 							</ul>
 							<ul class="btnList">
 								<li>
-									<a href="https://www.jobaba.net/auland/mainList.do"><p class="gBold">바로가기 →</p></a>
+									<a href="https://www.jobaba.net/auland/mainList.do"><p class="gBold">바로가기</p></a>
 								</li>
 							</ul>
 						</div>
@@ -370,27 +360,24 @@
 							</p>
 							<ul class="infoList">
 								<li>
-									<strong>미션 수행 방법</strong>
-									<p><span>직업선호도, 취업준비도, 취업가능성,<br>
-										NCS직업역량진단검사 완료</span>하면 참여권 지급</p>
+									<p><span>4개 진단 모두 완료</span>하면 참여권 <span>1개</span> 지급<br> <em>(검사 완료 후 즉시 지급)</p>
 								</li>
 								<li>
-									<strong>참여권 지급 개수</strong>
-									<p><span>1개</span> <em>(검사 완료 후 즉시 지급)<br> <span>※ 4개 진단 모두 완료해야만 참여권 지급</span></em></p>
+									<p><em><span>※ 4개 진단 모두 완료해야만 참여권 지급</span></em></p>
 								</li>
 							</ul>
 							<ul class="btnList">
 								<li>
-									<a href="https://www.jobaba.net/epmtDiag/jobPrfrnc/jobPrfrncMain.do"><p class="gBold">직업선호도 →</p></a>
+									<a href="https://www.jobaba.net/epmtDiag/jobPrfrnc/jobPrfrncMain.do"><p class="gBold">직업선호도</p></a>
 								</li>
 								<li>
-									<a href="https://www.jobaba.net/epmtDiag/epmtPrep/epmtPrepMain.do"><p class="gBold">취업준비도 →</p></a>
+									<a href="https://www.jobaba.net/epmtDiag/epmtPrep/epmtPrepMain.do"><p class="gBold">취업준비도</p></a>
 								</li>
 								<li>
-									<a href="https://www.jobaba.net/jobInfo/jobInfoMain.do"><p class="gBold">취업가능성 →</p></a>
+									<a href="https://www.jobaba.net/jobInfo/jobInfoMain.do"><p class="gBold">취업가능성</p></a>
 								</li>
 								<li>
-									<a href="https://www.jobaba.net/jobInfoNcs/jobInfoNcsMain.do"><p class="gBold">NCS직업역량진단 →</p></a>
+									<a href="https://www.jobaba.net/jobInfoNcs/jobInfoNcsMain.do"><p class="gBold">NCS직업역량진단</p></a>
 								</li>
 							</ul>
 						</div>
@@ -401,11 +388,11 @@
 								<p>본 이벤트는 경품 소진 시까지 룰렛 참여권 획득 후, <span class="gBold">반복적으로 참여 가능합니다.</span></p>
 							</li>
 							<li>
-								<p><span class="gBold">MISSION 별로 1일 최대 이용권 지급 횟수는 3회</span>입니다.<br>
+								<p><span class="gBold">MISSION 별로 1일 최대 3회까지 참여</span> 가능합니다. (0시 기준 초기화)<br>
 									<em>(1일 최대 룰렛 이용권 지급 개수 : AI역량검사 12개 / 취업진로진단검사 9개 / 취업진단검사 4종 3개)</em></p>
 							</li>
 							<li>
-								<p>경품 소진 시, <span class="gBold">보유한 룰렛 참여권은 소멸</span>됩니다.</p>
+								<p>경품 소진 시, <span class="gBold">보유한 룰렛 참여권은 소멸</span> 됩니다.</p>
 							</li>
 						</ul>
 					</div>
