--- a/html/event/event04.html
+++ b/html/event/event04.html
@@ -308,46 +308,46 @@
 			<div class="innerSection">
 				<div class="cont01">
 					<div class="itemBox box01">
-						<div class="titWrap">
-							<p>MISSION. 1</p>
-						</div>
-						<div class="txtWrap">
-							<p class="txt">
-								<strong class="gBold">잡아바 AI 역량검사</strong>
-								지금껏 알지 못했던 나의 진짜 역량을 알아보자!
-							</p>
-							<ul class="infoList">
-								<li>
-									<p><span>AI역량검사 완료</span>하면 참여권 <span>4개</span> 지급<br> <em>(검사 완료 후 즉시 지급)</em></p>
-								</li>
-							</ul>
-							<ul class="btnList">
-								<li>
-									<a href="https://www.jobaba.net/interview/mainList.do"><p class="gBold">바로가기</p></a>
-								</li>
-							</ul>
-						</div>
+						<a href="https://www.jobaba.net/interview/mainList.do">
+							<div class="titWrap">
+								<p>MISSION. 1</p>
+							</div>
+							<div class="txtWrap">
+								<p class="txt">
+									<strong class="gBold">잡아바 AI 역량검사</strong>
+									지금껏 알지 못했던 나의 진짜 역량을 알아보자!
+								</p>
+								<ul class="infoList">
+									<li>
+										<p><span>AI역량검사 완료</span>하면 참여권 <span>4개</span> 지급<br> <em>(검사 완료 후 즉시 지급)</em></p>
+									</li>
+								</ul>
+								<div class="btnLink">
+									<p class="gBold">바로가기</p>
+								</div>
+							</div>
+						</a>
 					</div>
 					<div class="itemBox box02">
-						<div class="titWrap">
-							<p>MISSION. 2</p>
-						</div>
-						<div class="txtWrap">
-							<p class="txt">
-								<strong class="gBold">취업진로진단검사</strong>
-								나에게 적합한 진로, 직업, 직무가 고민이라면? 지금 바로 신청하세요
-							</p>
-							<ul class="infoList">
-								<li>
-									<p><span>취업진로진단검사 완료</span>하면 참여권 <span>3개</span> 지급<br> <em>(검사 완료 후 즉시 지급)</em></p>
-								</li>
-							</ul>
-							<ul class="btnList">
-								<li>
-									<a href="https://www.jobaba.net/auland/mainList.do"><p class="gBold">바로가기</p></a>
-								</li>
-							</ul>
-						</div>
+						<a href="https://www.jobaba.net/auland/mainList.do">
+							<div class="titWrap">
+								<p>MISSION. 2</p>
+							</div>
+							<div class="txtWrap">
+								<p class="txt">
+									<strong class="gBold">취업진로진단검사</strong>
+									나에게 적합한 진로, 직업, 직무가 고민이라면? 지금 바로 신청하세요
+								</p>
+								<ul class="infoList">
+									<li>
+										<p><span>취업진로진단검사 완료</span>하면 참여권 <span>3개</span> 지급<br> <em>(검사 완료 후 즉시 지급)</em></p>
+									</li>
+								</ul>
+								<div class="btnLink">
+									<p class="gBold">바로가기</p>
+								</div>
+							</div>
+						</a>
 					</div>
 					<div class="itemBox box03">
 						<div class="titWrap">
