--- a/index.html
+++ b/index.html
@@ -303,6 +303,11 @@
 				<td>이벤트</td>
 				<td><a href="html/event/event04.html" class="preview" target="_blank">잡아바 미션 수행이벤트</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/new_job_letter04.html" class="preview" target="_blank">공공일자리 뉴스레터 ver04</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
