--- a/html/wz/new_job_letter04.html
+++ b/html/wz/new_job_letter04.html
@@ -70,7 +70,7 @@
                                                   <td style="padding-bottom: 20px; line-height: 16px;">
                                                     <span style="display: inline-block; color: #156cdd; font-size: 16px;">성남산업진흥원</span> <span style="color: #c2c2c2; font-size: 16px;">|</span> <span style="display: inline-block; color: #555555; font-size: 16px;">경기 성남시</span>
                                                   </td>
-                                                  <td style="padding-bottom: 20px; line-height: 16px;">
+                                                  <td style="padding-bottom: 20px; line-height: 16px; text-align: right;">
                                                     <span style="display: inline-block; padding: 2px 6px 2px 6px; background-color: #ebebeb; color: #ff0000; font-size: 14px; font-weight: bold;">D-5</span> <span style="display: inline-block; color: #737373; font-size: 14px;">~2024-08-12</span>
                                                   </td>
                                                 </tr>
@@ -96,7 +96,7 @@
                                                   <td style="padding-bottom: 20px; line-height: 16px;">
                                                     <span style="display: inline-block; color: #156cdd; font-size: 16px;">성남산업진흥원</span> <span style="color: #c2c2c2; font-size: 16px;">|</span> <span style="display: inline-block; color: #555555; font-size: 16px;">경기 성남시</span>
                                                   </td>
-                                                  <td style="padding-bottom: 20px; line-height: 16px;">
+                                                  <td style="padding-bottom: 20px; line-height: 16px; text-align: right;">
                                                     <span style="display: inline-block; padding: 2px 6px 2px 6px; background-color: #ebebeb; color: #ff0000; font-size: 14px; font-weight: bold;">D-5</span> <span style="display: inline-block; color: #737373; font-size: 14px;">~2024-08-12</span>
                                                   </td>
                                                 </tr>
@@ -122,7 +122,7 @@
                                                   <td style="padding-bottom: 20px; line-height: 16px;">
                                                     <span style="display: inline-block; color: #156cdd; font-size: 16px;">성남산업진흥원</span> <span style="color: #c2c2c2; font-size: 16px;">|</span> <span style="display: inline-block; color: #555555; font-size: 16px;">경기 성남시</span>
                                                   </td>
-                                                  <td style="padding-bottom: 20px; line-height: 16px;">
+                                                  <td style="padding-bottom: 20px; line-height: 16px; text-align: right;">
                                                     <span style="display: inline-block; padding: 2px 6px 2px 6px; background-color: #ebebeb; color: #ff0000; font-size: 14px; font-weight: bold;">D-5</span> <span style="display: inline-block; color: #737373; font-size: 14px;">~2024-08-12</span>
                                                   </td>
                                                 </tr>
