--- a/html/wz/new_job_letter04.html
+++ b/html/wz/new_job_letter04.html
@@ -142,7 +142,7 @@
                                       <!-- 추천정보 더보기 -->
                                       <tr>
                                         <td style="padding-top: 30px; text-align: center;">
-                                          <a href="" target="_blank">
+                                          <a href="https://www.jobaba.net/empmn/enterpriseEmployListNew.do" target="_blank">
                                             <span style="display: inline-block; width: 320px; padding: 14px 0 14px 0; background-color: #156cdd; color: #ffffff; font-size: 20px; font-weight: bold; border-radius: 10px 10px 10px 10px; box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);">추천정보 더보기</span>
                                           </a>
                                         </td>
@@ -162,7 +162,7 @@
               <!-- banner -->
               <tr>
                 <td style="background-color: #ffffff; padding: 40px 30px 40px 30px;">
-                  <a href="" target="_blank" style="text-decoration: none;">
+                  <a href="https://jobaba.channel.io/home" target="_blank" style="text-decoration: none;">
                     <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job04/banner.png" alt="오늘도 채용공고만 찾고 있나요? 취업 코칭 받기" width="740" style="display: block;width: 100%">
                   </a>
                 </td>
