--- a/html/wz/new_job_letter05.html
+++ b/html/wz/new_job_letter05.html
@@ -32,7 +32,7 @@
                   </table>
                 </td>
               </tr>
-              <!-- 메인 컨텐츠 -->
+              <!-- 공공일자리 채용공고 -->
               <tr>
                 <td style="background-color: #ffffff; padding: 50px 30px 0 30px; font-family: 'Noto Sans KR', sans-serif;">
                   <table align="center" border="0" cellpadding="0" cellspacing="0" width="740" style="max-width: 740px; width: 100%;">
@@ -42,6 +42,136 @@
                           <span style="color: #003280; font-weight: 900;">홍길동</span>님을 위한 잡아바 추천 채용공고
                         </td>
                       </tr>
+                      <tr>
+                        <td>
+                          <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="width: 100%;">
+                            <tbody>
+                              <tr>
+                                <td style="padding: 40px 30px 40px 30px; background-color: #f5f5f5; border-radius: 10px 10px 10px 10px;">
+                                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="width: 100%;">
+                                    <tbody>
+                                      <tr>
+                                        <td style="padding: 0 0 15px 18px; color: #003281; font-size: 22px; font-weight: bold; letter-spacing: -1px;">
+                                          공공일자리 채용공고 <span style="color: #ff0000;">10</span>건
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td style="padding: 0 0 28px 18px; color: #000; font-size: 16px; line-height: 16px;">
+                                          <span style="display: inline-block; padding: 6px 10px 6px 10px; background-color: #fff; border: 1px solid #d7d7d7; border-radius: 30px;">경영·사무·금융·보험직</span> 직종 <span class="bar" style="display: inline-block; width: 1px; height: 12px; margin: 0 4px 0 4px; background-color: #c2c2c2;"></span> <span style="display: inline-block; padding: 6px 10px 6px 10px; background-color: #fff; border: 1px solid #d7d7d7; border-radius: 30px;">수원시</span> <span style="display: inline-block; padding: 6px 10px 6px 10px; background-color: #fff; border: 1px solid #d7d7d7; border-radius: 30px;">성남시</span> <span style="display: inline-block; padding: 6px 10px 6px 10px; background-color: #fff; border: 1px solid #d7d7d7; border-radius: 30px;">화성시</span> 외 <span style="display: inline-block;">5</span>개 지역
+                                        </td>
+                                      </tr>
+                                      <!-- 기업 정보 -->
+                                      <tr>
+                                        <td style="padding-bottom: 15px;">
+                                          <a href="" target="_blank" style="display: block; padding: 20px 30px 20px 30px; background-color: #ffffff; border: 1px solid #d7d7d7; border-radius: 10px 10px 10px 10px; text-decoration: none;">
+                                            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="width: 100%;">
+                                              <tbody>
+                                                <tr>
+                                                  <td style="padding-bottom: 20px; line-height: 16px;">
+                                                    <span style="display: inline-block; color: #003281; font-size: 16px;">성남산업진흥원</span> <span class="bar" style="display: inline-block; width: 1px; height: 12px; margin: 0 4px 0 4px; background-color: #c2c2c2;"></span> <span style="display: inline-block; color: #555555; font-size: 16px;">경기 성남시</span>
+                                                  </td>
+                                                  <td style="padding-bottom: 20px; line-height: 16px; text-align: right;">
+                                                    <span style="display: inline-block; padding: 2px 6px 2px 6px; background-color: #ebebeb; color: #ff0000; font-size: 14px; font-weight: bold;">D-5</span> <span style="display: inline-block; color: #737373; font-size: 14px;">~2024-08-12</span>
+                                                  </td>
+                                                </tr>
+                                                <tr>
+                                                  <td style="display: inline-block; width: 480px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: #000; font-size: 18px; font-weight: bold;">
+                                                    2024년 신규직원(대체인력) 채용 2차 재공고 타이틀은 여기 2024년 신규직원(대체인력) 채용 2차 재공고 타이틀은 여기
+                                                  </td>
+                                                  <td style="text-align: right;">
+                                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job04/arrow_btn.png" alt="기업 정보 바로가기" style="width: 12px;">
+                                                  </td>
+                                                </tr>
+                                              </tbody>
+                                            </table>
+                                          </a>
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td style="padding-bottom: 15px;">
+                                          <a href="" target="_blank" style="display: block; padding: 20px 30px 20px 30px; background-color: #ffffff; border: 1px solid #d7d7d7; border-radius: 10px 10px 10px 10px; text-decoration: none;">
+                                            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="width: 100%;">
+                                              <tbody>
+                                                <tr>
+                                                  <td style="padding-bottom: 20px; line-height: 16px;">
+                                                    <span style="display: inline-block; color: #003281; font-size: 16px;">성남산업진흥원</span> <span class="bar" style="display: inline-block; width: 1px; height: 12px; margin: 0 4px 0 4px; background-color: #c2c2c2;"></span> <span style="display: inline-block; color: #555555; font-size: 16px;">경기 성남시</span>
+                                                  </td>
+                                                  <td style="padding-bottom: 20px; line-height: 16px; text-align: right;">
+                                                    <span style="display: inline-block; padding: 2px 6px 2px 6px; background-color: #ebebeb; color: #ff0000; font-size: 14px; font-weight: bold;">D-5</span> <span style="display: inline-block; color: #737373; font-size: 14px;">~2024-08-12</span>
+                                                  </td>
+                                                </tr>
+                                                <tr>
+                                                  <td style="display: inline-block; width: 480px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: #000; font-size: 18px; font-weight: bold;">
+                                                    2024년 신규직원(대체인력) 채용 2차 재공고 타이틀은 여기 2024년 신규직원(대체인력) 채용 2차 재공고 타이틀은 여기
+                                                  </td>
+                                                  <td style="text-align: right;">
+                                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job04/arrow_btn.png" alt="기업 정보 바로가기" style="width: 12px;">
+                                                  </td>
+                                                </tr>
+                                              </tbody>
+                                            </table>
+                                          </a>
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td style="padding-bottom: 15px;">
+                                          <a href="" target="_blank" style="display: block; padding: 20px 30px 20px 30px; background-color: #ffffff; border: 1px solid #d7d7d7; border-radius: 10px 10px 10px 10px; text-decoration: none;">
+                                            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="width: 100%;">
+                                              <tbody>
+                                                <tr>
+                                                  <td style="padding-bottom: 20px; line-height: 16px;">
+                                                    <span style="display: inline-block; color: #003281; font-size: 16px;">성남산업진흥원</span> <span class="bar" style="display: inline-block; width: 1px; height: 12px; margin: 0 4px 0 4px; background-color: #c2c2c2;"></span> <span style="display: inline-block; color: #555555; font-size: 16px;">경기 성남시</span>
+                                                  </td>
+                                                  <td style="padding-bottom: 20px; line-height: 16px; text-align: right;">
+                                                    <span style="display: inline-block; padding: 2px 6px 2px 6px; background-color: #ebebeb; color: #ff0000; font-size: 14px; font-weight: bold;">D-5</span> <span style="display: inline-block; color: #737373; font-size: 14px;">~2024-08-12</span>
+                                                  </td>
+                                                </tr>
+                                                <tr>
+                                                  <td style="display: inline-block; width: 480px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: #000; font-size: 18px; font-weight: bold;">
+                                                    2024년 신규직원(대체인력) 채용 2차 재공고 타이틀은 여기 2024년 신규직원(대체인력) 채용 2차 재공고 타이틀은 여기
+                                                  </td>
+                                                  <td style="text-align: right;">
+                                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job04/arrow_btn.png" alt="기업 정보 바로가기" style="width: 12px;">
+                                                  </td>
+                                                </tr>
+                                              </tbody>
+                                            </table>
+                                          </a>
+                                        </td>
+                                      </tr>
+                                      <!-- 추천정보 더보기 -->
+                                      <tr>
+                                        <td style="padding-top: 30px; text-align: center;">
+                                          <a href="https://www.jobaba.net/empmn/enterpriseEmployListNew.do" target="_blank">
+                                            <span style="display: inline-block; width: 320px; padding: 14px 0 14px 0; background-color: #003281; color: #ffffff; font-size: 20px; font-weight: bold; border-radius: 10px 10px 10px 10px; box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);">공공일자리 추천정보 더보기</span>
+                                          </a>
+                                        </td>
+                                      </tr>
+                                    </tbody>
+                                  </table> 
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </td>
+              </tr>
+              <!-- banner -->
+              <tr>
+                <td style="background-color: #ffffff; padding: 40px 30px 40px 30px;">
+                  <a href="https://jobaba.channel.io/home" target="_blank" style="text-decoration: none;">
+                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job04/banner.png" alt="오늘도 채용공고만 찾고 있나요? 취업 코칭 받기" width="740" style="display: block;width: 100%">
+                  </a>
+                </td>
+              </tr>
+              <!-- 기업채용 채용공고 -->
+              <tr>
+                <td style="background-color: #ffffff; padding: 0 30px 30px 30px; font-family: 'Noto Sans KR', sans-serif;">
+                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="740" style="max-width: 740px; width: 100%;">
+                    <tbody>
                       <tr>
                         <td>
                           <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="width: 100%;">
@@ -157,14 +287,6 @@
                       </tr>
                     </tbody>
                   </table>
-                </td>
-              </tr>
-              <!-- banner -->
-              <tr>
-                <td style="background-color: #ffffff; padding: 40px 30px 40px 30px;">
-                  <a href="https://jobaba.channel.io/home" target="_blank" style="text-decoration: none;">
-                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/new_job04/banner.png" alt="오늘도 채용공고만 찾고 있나요? 취업 코칭 받기" width="740" style="display: block;width: 100%">
-                  </a>
                 </td>
               </tr>
               <!-- 취업역량강화 지원 서비스 -->
